Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,1 +1,3 @@
-https://learn.co/tracks/full-stack-web-development-v7/html-and-css-introduction/the-web-and-html/experiencing-html-lab#
+"Girfriend In a Coma"
+"Too drunk to F"
+"Random Stuff"
